Added 2022 Silents Under the Stars

--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -120,7 +120,9 @@ function MM_swapImage() { //v3.0
 										<br>
 										and the<br>
 &nbsp;William S. Hart Park &amp; Museum <br><br>
-<h2 align="center" class="silents">are very sorry to report the postponement, due to the Covid-19 pandemic, of the 2020 &amp; 2021 </font></span></span></h2></p>
+<h2 align="center" class="silents">
+are thrilled to announce the return of
+</font></span></span></h2></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
 										<span style="border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
@@ -128,20 +130,35 @@ function MM_swapImage() { //v3.0
 											<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 											</span>
                                             <h2 align="center" class="silents">
-                                            Please check back here for updates. Thank you, valued supporters!
+On Saturday, September 17<sup>th</sup> 2022!<br>
+Purchase Tickets
+<a target="_blank" href="https://www.eventbrite.com/e/silents-under-the-stars-2022-tickets-393459767757">
+HERE
+<span><img src="../images/ExternalLink.png"/></span></a>
+.
+<br>
 											</span>
                                             </TD>
 											<TD valign="top">
-											<h2 class="silents" align="center" >
-                                             Click below for photos from 
+											<p class="silents" align="center" >
+                                            We are also thrilled to announce our RETURN TO FILM for the showing of Hart's greatest (and final) feature film
+                                            </p>
+											<h1 class="silents" align="center" >
+                                            Tumbleweeds!
+                                            </h1>
+											<p class="silents" align="center" >
+                                             See below for details.
+                                             </p>
+											<p class="silents" align="center" >
+                                             Click for photos from 
                                              <a target="_blank" href="https://www.facebook.com/pg/friendsofhartpark/photos/?tab=album&album_id=2452268634838065">
                                              2019's Silents Under the Stars!
-                                            <span><img src="../images/ExternalLink.png"/></span>
-                                             </h2>
-                                             <br>
-                                             <img src="silents/silents2019/silents2019thumbnail.jpg"/>
+                                            <span> <img src="../images/ExternalLink.png"/></span>
                                              </a>
+                                             </p>
+                                             <br>
                                              <!--
+                                             <img src="silents/silents2019/silents2019thumbnail.jpg"/>
                                             <a target="_blank" 
                                              href="https://www.eventbrite.com/e/silents-under-the-stars-2019-hart-hall-william-s-hart-park-newhall-ca-tickets-63519411269">
                                              <button type="button">Buy Tickets to 2019 <br>Silents Under the Stars</button>
@@ -160,7 +177,9 @@ function MM_swapImage() { //v3.0
 											    <table border="0" width="100%">
 													<tr>
 														<td colspan="2">
-                                                        <img align="center" src="silents/silents2019/silents2019.png"/>
+<a target="_blank" href="https://www.eventbrite.com/e/silents-under-the-stars-2022-tickets-393459767757">
+                                                        <img align="center" src="silents/silents2022/silents2022_lg.jpg"/>
+</a>
                                                         </td>
                                                     </tr>
 													<tr>
@@ -171,6 +190,21 @@ function MM_swapImage() { //v3.0
 											</TR>    
 											<TR>
 											<TD width="563" valign="top">
+                                            <p class="silents">
+Join us for an amazing evening filled with live music, dinner, and a silent movie. Our silent film will be "Tumbleweeds" featuring William S. Hart being shown on a 1909 35mm Power's Motion Picture Machine along with live accompaniment. This is our annual fundraiser to raise funds for Hart Park and the Barnyard. There will also be a silent auction with lots of wonderfully enticing items for sale to aid in our fundraising efforts. We will also be honoring LA County Supervisor Kathryn Barger and the years of her continued support.
+
+                                            </p><p class="silents">
+<b>VIP Sponsor Table</b> available (10 Seats) that include a VIP Cocktail/Appetizer Hour, Reserved seating, signed book on the History of Hart Park, Dinner, Dessert, Non-Alcoholic Beverages, Entertainment, and Silent Movie
+
+                                            </p><p class="silents">
+<b>General Admission Tickets</b> include Dinner, Dessert, Non-Alcoholic Beverages, Entertainment, and Silent Movie
+
+                                            </p><p class="silents">
+A No-Host Bar will be available for additional charge.
+                                            </p>
+											</TD>
+											<TD width="295">
+											<span class="Apple-style-span">
 											<B class="EVNTC">Where?</B><blockquote>
 												<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 												<p align="center">
@@ -182,48 +216,10 @@ function MM_swapImage() { //v3.0
 												at HART HALL</font></p>
 												<p align="center" style="margin-top: 0; margin-bottom: 0">
 												<font size="5" face="Copperplate Gothic Bold">
-												24151 NEWHALL AVE. </font></p>
-												<p align="center" style="margin-top: 0; margin-bottom: 0">
-												<font size="4" face="Copperplate Gothic Bold">
-												(formerly San Fernando Rd.)</font></p>
+												24151 NEWHALL AVE. </font></p><br>
 												</span>
-												<span class="Apple-style-span" style="border-collapse: separate; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px">
-												<p align="center" style="margin-top: 0; margin-bottom: 0">
-												<font face="Copperplate Gothic Bold" size="5" color="#770000">
-												Newhall, CA</font></p>
-												</span>
-												<span class="Apple-style-span" style="border-collapse: separate; color: rgb(0, 0, 0); font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px">
-                                                <p class="silents">
-												From L.A. area, take I-5 
-												North, Golden State Freeway, to 
-												I-14 North, Antelope Valley 
-												Freeway
-                                                </p><p class="silents">
-												Exit 
-												at Newhall Avenue (formerly San 
-												Fernando Road), which is 
-												the first off-ramp.
-                                                </p><p class="silents">
-												Turn right (North) on Newhall Avenue (the old 
-												San Fernando Road).
-                                                </p><p class="silents">
-												Travel about 1½ miles and cross 
-												the railroad tracks.
-                                                </p><p class="silents">
-												Just after crossing the railroad 
-												tracks, the Park is on your 
-												left.
-                                                </p><p class="silents">
-												Once 
-												you have come through the main 
-												gate, park anywhere in the 
-                                                lower 
-												lot. Do not go up the hill in 
-												your vehicle.
-												</p></span>
-												<span class="Apple-style-span" style="border-collapse: separate; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px">
-												<p style="margin-top: 0; margin-bottom: 0" align="center">
 												<span style="font-size: medium; border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
+												<p align="center">
 												<font size="5" face="Copperplate Gothic Bold">
 												Proceed to 
 												<a href="../Hart_Hall/hart_hall.html">
@@ -235,21 +231,17 @@ function MM_swapImage() { //v3.0
 												<span class="Apple-style-span">
 												<font size="5" face="Copperplate Gothic Bold">
 												<span style="border-collapse: separate; color: #770000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px">
-												<A href="http://www.hartmuseum.org/hartmap.html" target="_blank">
-												<span style="border-collapse: separate; color: #770000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; text-decoration:underline">Click here for 
-												a map</span></A> </span></font>
+                                                </span></font>
 												</span></p>
 											</blockquote>
-											</TD>
-											<TD width="295">
-											<p align="center">
-											<span class="Apple-style-span">
+                                            <!--
 											<span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
                                         <img alt="SCV In The Movies" border="0" src="images/scvinthemovies.jpg">
 											<h2 align=center> 
-										Our event was hosted by 
+										Our event is hosted by 
                                         &ldquo;<a target="_blank" href="http://scvinthemovies.com">SCV 
                                         In The Movies</a>&rdquo; hosts E.J. Stephens and Bill West</h2>
+                                            -->
 											</TD>
 										</TR>
 									</TBODY>
