--- a/index.html
+++ b/index.html
@@ -266,9 +266,13 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 -->
 <h3>Silents Under The Stars makes a Comeback!</h3>
-<a href="Event_Pages/silents/silents2022/SilentsSaveTheDate_lg.jpg" 
-title="Silents Under the Stars Returns!" rel="lightbox[silents2022]">
-<img src="Event_Pages/silents/silents2022/SilentsSaveTheDate_sm.jpg"
+<h3>With our RETURN TO FILM on a vintage hand-cranked projector!</h3>
+<h3>Purchase tickets by clicking
+<a target="_blank" href="https://www.eventbrite.com/e/silents-under-the-stars-2022-tickets-393459767757">
+HERE</a>.</h3>
+<p align="center">Click on the flyer below for further details:</p>
+<a href="Event_Pages/silents.html">
+<img align="center" src="Event_Pages/silents/silents2022/silents2022_sm.jpg"/>
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2022 Calendar of Events</h2>
@@ -292,11 +296,11 @@ Barnyard Tours
 </a>
 </td></tr>
 <tr> <td id="EventDate">
-Saturday, September 17<sup>th</sup>
+Saturday, September 17<sup>th</sup> at 6pm
 </td> <td id="Event"> 
-<a href= "Event_Pages/silents/silents2022/SilentsSaveTheDate_lg.jpg" 
-title="Silents Under the Stars Returns!" rel="lightbox[silents]">
+<a href= "Event_Pages/silents.html">
 Silents Under the Stars Returns!
+</a>
 </td></tr>
 <!--
 <tr> <td id="EventDate">
