Per Leon, took out ticket purchase link temporarily.

--- a/Event_Pages/index.html
+++ b/Event_Pages/index.html
@@ -131,11 +131,13 @@ are thrilled to announce the return of
 											</span>
                                             <h2 align="center" class="silents">
 On Saturday, September 17<sup>th</sup> 2022!<br>
+<h3><i>Ticket purchase link under construction... please check back soon!</i></h3>
+<!--
 Purchase Tickets
 <a target="_blank" href="https://www.eventbrite.com/e/silents-under-the-stars-2022-tickets-393459767757">
 HERE
 <span><img src="../images/ExternalLink.png"/></span></a>
-.
+-->.
 <br>
 											</span>
                                             </TD>
