--- a/index.htm
+++ b/index.htm
@@ -267,9 +267,12 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 -->
 <h3>Silents Under The Stars makes a Comeback!</h3>
 <h3>With our RETURN TO FILM on a vintage hand-cranked projector!</h3>
+<h3><i>Ticket purchase link under construction... please check back soon!</i></h3>
+<!--
 <h3>Purchase tickets by clicking
 <a target="_blank" href="https://www.eventbrite.com/e/silents-under-the-stars-2022-tickets-393459767757">
 HERE</a>.</h3>
+-->
 <p align="center">Click on the flyer below for further details:</p>
 <a href="Event_Pages/silents.html">
 <img align="center" src="Event_Pages/silents/silents2022/silents2022_sm.jpg"/>
