Cancellation of 2022 Silents.

--- a/Event_Pages/index.html
+++ b/Event_Pages/index.html
@@ -121,7 +121,7 @@ function MM_swapImage() { //v3.0
 										and the<br>
 &nbsp;William S. Hart Park &amp; Museum <br><br>
 <h2 align="center" class="silents">
-are thrilled to announce the return of
+are very sorry to announce the postponement of
 </font></span></span></h2></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
@@ -130,8 +130,6 @@ are thrilled to announce the return of
 											<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 											</span>
                                             <h2 align="center" class="silents">
-On Saturday, September 17<sup>th</sup> 2022!<br>
-<h3><i>Ticket purchase link under construction... please check back soon!</i></h3>
 <!--
 Purchase Tickets
 <a target="_blank" href="https://www.eventbrite.com/e/silents-under-the-stars-2022-tickets-393459767757">
@@ -142,15 +140,6 @@ HERE
 											</span>
                                             </TD>
 											<TD valign="top">
-											<p class="silents" align="center" >
-                                            We are also thrilled to announce our RETURN TO FILM for the showing of Hart's greatest (and final) feature film
-                                            </p>
-											<h1 class="silents" align="center" >
-                                            Tumbleweeds!
-                                            </h1>
-											<p class="silents" align="center" >
-                                             See below for details.
-                                             </p>
 											<p class="silents" align="center" >
                                              Click for photos from 
                                              <a target="_blank" href="https://www.facebook.com/pg/friendsofhartpark/photos/?tab=album&album_id=2452268634838065">
@@ -179,9 +168,7 @@ HERE
 											    <table border="0" width="100%">
 													<tr>
 														<td colspan="2">
-<a target="_blank" href="https://www.eventbrite.com/e/silents-under-the-stars-2022-tickets-393459767757">
-                                                        <img align="center" src="silents/silents2022/silents2022_lg.jpg"/>
-</a>
+                                                        <img align="center" src="silents/silents2022/silents2022x_lg.jpg"/>
                                                         </td>
                                                     </tr>
 													<tr>
@@ -193,6 +180,7 @@ HERE
 											<TR>
 											<TD width="563" valign="top">
                                             <p class="silents">
+                                            <!--
 Join us for an amazing evening filled with live music, dinner, and a silent movie. Our silent film will be "Tumbleweeds" featuring William S. Hart being shown on a 1909 35mm Power's Motion Picture Machine along with live accompaniment. This is our annual fundraiser to raise funds for Hart Park and the Barnyard. There will also be a silent auction with lots of wonderfully enticing items for sale to aid in our fundraising efforts. We will also be honoring LA County Supervisor Kathryn Barger and the years of her continued support.
 
                                             </p><p class="silents">
@@ -204,6 +192,7 @@ Join us for an amazing evening filled with live music, dinner, and a silent movi
                                             </p><p class="silents">
 A No-Host Bar will be available for additional charge.
                                             </p>
+                                            -->
 											</TD>
 											<TD width="295">
 											<span class="Apple-style-span">
