--- a/index.htm
+++ b/index.htm
@@ -265,18 +265,16 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <!--
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 -->
-<h3>Silents Under The Stars makes a Comeback!</h3>
-<h3>With our RETURN TO FILM on a vintage hand-cranked projector!</h3>
-<h3><i>Ticket purchase link under construction... please check back soon!</i></h3>
+<h3>We're very sorry to report, but due to circumstances beyond
+our control, we're gonna have to postpone</h3>
+<h2>Silents Under the Stars</h2>
+<h3>Please check back for our rescheduled date.</h3>
 <!--
 <h3>Purchase tickets by clicking
 <a target="_blank" href="https://www.eventbrite.com/e/silents-under-the-stars-2022-tickets-393459767757">
 HERE</a>.</h3>
 -->
-<p align="center">Click on the flyer below for further details:</p>
-<a href="Event_Pages/silents.html">
-<img align="center" src="Event_Pages/silents/silents2022/silents2022_sm.jpg"/>
-</a>
+<img align="center" src="Event_Pages/silents/silents2022/silents2022x_sm.jpg"/>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2022 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
@@ -296,13 +294,6 @@ Saturdays 10:30am&mdash;12:30pm
 <a href= "Event_Pages/2022barnyardTours.png" 
 title="Barnyard Tours" rel="lightbox[barnyardTour]">
 Barnyard Tours
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Saturday, September 17<sup>th</sup> at 6pm
-</td> <td id="Event"> 
-<a href= "Event_Pages/silents.html">
-Silents Under the Stars Returns!
 </a>
 </td></tr>
 <!--
