--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -205,6 +205,11 @@ function MM_swapImage() { //v3.0
                                   Fall&ndash;Winter 2021/2022
                                   </a>
                                   </li>
+                                  <li>
+                                  <a href="https://mailchi.mp/c00f4af603a5/hart-of-the-matter-summer-fall-2022" target="_blank">
+                                  Summer&ndash;Fall 2022
+                                  </a>
+                                  </li>
                                   </ul>
                     </div>
                     For earlier editions, see <a href="https://scvhistory.com/scvhistory/googlesearchresults.htm?cx=010361867682521671142%3Abapf7zmeoby&cof=FORID%3A10&ie=ISO-8859-1&q=hart+of+the+matter&sa=Search" target="_blank">SCVhistory.com</a>
