Cxl'ed Pow Wow for 2022.  Removed Cindy's name per request.

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -183,12 +183,12 @@ and The Friends of Hart Park &amp; Museum<br></h2>
                             </p>
                             <p align="center"> </p>
                             <h2 align="center"> and Craft Fair<br><br></h2>
-<h1 align="center">We're sorry to report that the 2020 &amp; 2021 Pow Wows have been 
+<h1 align="center">We're sorry to report that the 2020&ndash;2022 Pow Wows have been 
 cancelled due to the Corona Virus pandemic.</h1>
                               </h2>
                     <hr>
 <p><h2 align="center">
-Stay tuned to this page for details on the 2022 Pow Wow, as they become available.<br><br>
+Stay tuned to this page for details on the 2023 Pow Wow, as they become available.<br><br>
 <!--
 Saturday, October 5<sup>th</sup> &mdash; 11am to 6pm <br>
 Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
@@ -199,8 +199,11 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
 </h3>
 -->
                             <h2 id="PowWowNote" align="center"><b>
+                            <!--
                                     Vendors, please contact Cindy Reeves 
-                                    at the phone number shown below.</b><br>
+                                    at the phone number shown below.
+                                    -->
+                                    </b><br>
 							</h2>
                         </tr>
                         <tr>
@@ -217,7 +220,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                                 M.C.
                                           </td>
                                           <td id="PowWowPerson">
-                                            Glen Begay
+                                            TBD
                                           </td>
                                         </tr>
                                         <tr>
@@ -225,7 +228,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                                 Arena Director
                                           </td>
                                           <td id="PowWowPerson">
-                                            Victor Chavez
+                                            TBD
                                           </td>
                                         </tr>
                                         <tr>
@@ -233,7 +236,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                                 Spiritual Director
                                           </td>
                                           <td id="PowWowPerson">
-                                            Ted Garcia
+                                            TBD
                                           </td>
                                         </tr>
                                         <tr>
@@ -243,7 +246,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                                 Head Man
                                           </td>
                                           <td id="PowWowPerson">
-                                            Johnny Velasquez
+                                            TBD
                                           </td>
                                         </tr>
                                         <tr>
@@ -251,7 +254,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                                 Head Woman
                                           </td>
                                           <td id="PowWowPerson">
-                                            Sonia Rae Sierra
+                                            TBD
                                           </td>
                                         </tr>
                                         <tr>
@@ -260,7 +263,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                               </p>
                                           </td>
                                           <td id="PowWowPerson">
-                                                John Mia, Jr.
+                                                TBD
 										  </td>
                                         </tr>
                                         <tr>
@@ -268,7 +271,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                                 Head Young Girl
                                           </td>
                                           <td id="PowWowPerson">
-                                            Alethea Hale
+                                            TBD
                                           </td>
                                         </tr>
                                         <tr>
@@ -284,7 +287,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                                 Northern Host Drum
                                           </td>
                                           <td id="PowWowPerson">
-                                            Bear Springs
+                                            TBD
                                           </td>
                                         </tr>
                                         <tr>
@@ -292,7 +295,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                                 Southern Host Drum
                                           </td>
                                           <td id="PowWowPerson">
-                                            Hale &amp; Co
+                                            TBD
                                           </td>
                                         </tr>
                                         <tr>
@@ -333,23 +336,28 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                     <p style="margin-bottom: 1px"> <b
                                         class="EVNTC">When?</b></p>
                                     <p style="margin-top: 0"><b> <font
-                                          color="#800000" size="5">2019
+                                          color="#800000" size="5">2023
                                           Schedule</font></b></p>
                                     <ul>
                                       <li>
+                                        TBD
+                                      <!--
                                           <p style="margin-top: 0;
                                             margin-bottom: 0"><font
                                              color="#006600" size="3"> Saturday, <br>11am&mdash;6pm</font><font
                                             size="3"><br>
-                                          </font></font></li>
+                                          </font></font>
+                                          --></li>
                                       <font color="#006600"><font
                                           size="3"> </font></font><b>
                                         <li>
+                                        TBD
+                                        <!--
                                           <p style="margin-top: 0;
                                             margin-bottom: 0"><font
                                               color="#006600" size="3">
                                               Sunday, <br>11am&mdash;5pm</font></p>
-                                        </li>
+                                        --></li>
                                       </b>
                                     </ul>
                                     <b> <font
@@ -383,7 +391,9 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                     valign="top" width="433">
                                     <p style="margin-right: 5px"> <b
                                         class="EVNTC">What?</b><br>
-                                      <font color="#006600" size="3"> It
+                                      <font color="#006600" size="3"> 
+                                      <!--
+                                      It
                                         is with great pleasure that we
                                         invite you to experience a
                                         significant slice of Native
@@ -411,6 +421,7 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                         Angeles County's largest Pow
                                         Wow.&nbsp; <b>Free admission! </b>
                                       </font> </p>
+                                  -->
                                   </td>
                                   <td rowspan="2" align="center"
                                     valign="top" width="155">
@@ -427,12 +438,13 @@ Sunday, October 6<sup>th</sup> &mdash; 11am to 5pm
                                             Bill Kimmey
                                             </dd>
 										  <dt>Vendor info</dt>
-                                          <dd>Cindy Reeves<br>
-                                              (661) 857-6178<br>
+                                          <dd>TBD<br>
+                                          <!--
                                               <small>
                                               <a href="mailto:Allboys2000@sbcglobal.net" target="_blank">
                                               Allboys2000@sbcglobal.net</a>
                                                 </small>
+                                          -->
                                           </dd>
                                         </b>
                                       </dl>
