Updated the Gift Shop with its hours.

--- a/Trading_Post/store.html
+++ b/Trading_Post/store.html
@@ -159,9 +159,9 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                    <div style="text-align: center;">
                     <h1>THE TRADING POST GIFT SHOP</h1>
                     <h2>William S. Hart Park and Museum</h2>
-<p align="center">
-<img align="center" src="../images/ParkClosure.png"/>
-</p>
+                    <p align="center">
+                        <img align="center" src="TradingPostHours_sm.png"/>
+                    </p>
 					<img src="../images/BarbedWire3.png"/>
 					</div>
 <!--
