--- a/index.htm
+++ b/index.htm
@@ -265,16 +265,7 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <!--
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 -->
-<h3>We're very sorry to report, but due to circumstances beyond
-our control, we're gonna have to postpone</h3>
-<h2>Silents Under the Stars</h2>
-<h3>Please check back for our rescheduled date.</h3>
-<!--
-<h3>Purchase tickets by clicking
-<a target="_blank" href="https://www.eventbrite.com/e/silents-under-the-stars-2022-tickets-393459767757">
-HERE</a>.</h3>
--->
-<img align="center" src="Event_Pages/silents/silents2022/silents2022x_sm.jpg"/>
+<img align="center" src="Trading_Post/TradingPostHours_sm.png"/>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2022 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
