Added Barnyard Lights 2022 event.

--- a/index.htm
+++ b/index.htm
@@ -265,11 +265,18 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <!--
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 -->
-<img align="center" src="Trading_Post/TradingPostHours_sm.png"/>
+<h2>
+Come see the lights, feed the animals, shop for the holidays at our Trading Post, and best of all,
+ <em>meet Santa</em> at
+</h2>
+<a href= "Event_Pages/barnyardLights2022-lg.jpg" 
+title="Barnyard Lights Tour" rel="lightbox[barnyardLightsTour]">
+<img align="center" src="Event_Pages/barnyardLights2022-sm.jpg"/>
+</a>
+
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2022 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
-</h4>
 <!--
 <h3><del>Crossed out items</del> <i>are cancelled due to concerns over Coronavirus</i><br></h3>
 <h4>
@@ -279,6 +286,13 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
 <tbody>
+<tr> <td id="EventDate">
+Saturday, Dec. 3<sup>rd</sup>, 4pm&mdash;8pm
+</td> <td id="Event"> 
+<a href= "Event_Pages/barnyardLights2022-lg.jpg" 
+title="Barnyard Lights Tour" rel="lightbox[barnyardLightsTour]">
+Barnyard Lights Tour
+</a>
 <tr> <td id="EventDate">
 Saturdays 10:30am&mdash;12:30pm
 </td> <td id="Event"> 
@@ -341,6 +355,8 @@ Cowboys &amp; Carols
                                     </tr>
                                     -->
 </table>
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<img align="center" src="Trading_Post/TradingPostHours_sm.png"/>
 <!--
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
