Added Winter 2022/2023 newsletter.

--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -210,6 +210,11 @@ function MM_swapImage() { //v3.0
                                   Summer&ndash;Fall 2022
                                   </a>
                                   </li>
+                                  <li>
+                                  <a href="https://mailchi.mp/b780b0ae105e/hart-of-the-matter-winter-2022-2023" target="_blank">
+                                  Winter 2022&ndash;2023
+                                  </a>
+                                  </li>
                                   </ul>
                     </div>
                     For earlier editions, see <a href="https://scvhistory.com/scvhistory/googlesearchresults.htm?cx=010361867682521671142%3Abapf7zmeoby&cof=FORID%3A10&ie=ISO-8859-1&q=hart+of+the+matter&sa=Search" target="_blank">SCVhistory.com</a>
