--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   </a>
                                   <h2>
                                   Click 
-                                  <a href="https://mailchi.mp/c00f4af603a5/hart-of-the-matter-summer-fall-2022"  target="_blank">
-                                  here for the Summer&ndash;Fall 2022 Hart of the Matter newsletter</a>.<br>
+                                  <a href="https://mailchi.mp/b780b0ae105e/hart-of-the-matter-winter-2022-2023" target="_blank">
+                                  here for the Winter 2022&ndash;2023 Hart of the Matter newsletter</a>.<br>
                                   Click <a href="Newsletters/newsletters.html"> here for other recent newsletters</a>.
                                   </h2>
                                   </td>
