--- a/index.html
+++ b/index.html
@@ -265,14 +265,15 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <!--
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 -->
-<h2>
-Come see the lights, feed the animals, shop for the holidays at our Trading Post, and best of all,
- <em>meet Santa</em> at
-</h2>
-<a href= "Event_Pages/barnyardLights2022-lg.jpg" 
-title="Barnyard Lights Tour" rel="lightbox[barnyardLightsTour]">
-<img align="center" src="Event_Pages/barnyardLights2022-sm.jpg"/>
-</a>
+<h4>
+It felt like The Powers That Be gave us a 1-day break from the rain just for our Holiday event!
+ <em>Click on the image below to see more photos from the</em>
+</h4>
+<a href= "https://www.facebook.com/media/set/?vanity=friendsofhartpark&set=a.5769289016469327" 
+title="Barnyard Lights Event" target="_blank">
+ <h2>2022 Barnyard Holiday Lights event
+<img align="center" src="images/BarnyardLights2022.png"/>
+</a></h2>
 
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2022 Calendar of Events</h2>
@@ -286,13 +287,6 @@ title="Barnyard Lights Tour" rel="lightbox[barnyardLightsTour]">
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
 <tbody>
-<tr> <td id="EventDate">
-Saturday, Dec. 3<sup>rd</sup>, 4pm&mdash;8pm
-</td> <td id="Event"> 
-<a href= "Event_Pages/barnyardLights2022-lg.jpg" 
-title="Barnyard Lights Tour" rel="lightbox[barnyardLightsTour]">
-Barnyard Lights Tour
-</a>
 <tr> <td id="EventDate">
 Saturdays 10:30am&mdash;12:30pm
 </td> <td id="Event"> 
