--- a/index.html
+++ b/index.html
@@ -265,18 +265,18 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <!--
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 -->
-<h4>
-It felt like The Powers That Be gave us a 1-day break from the rain just for our Holiday event!
- <em>Click on the image below to see more photos from the</em>
-</h4>
-<a href= "https://www.facebook.com/media/set/?vanity=friendsofhartpark&set=a.5769289016469327" 
-title="Barnyard Lights Event" target="_blank">
- <h2>2022 Barnyard Holiday Lights event
-<img align="center" src="images/BarnyardLights2022.png"/>
-</a></h2>
+<h3>
+Come join us Tuesdays, Wednesdays, and Thursdays in January, 9am&ndash;11am  at the 
+</h3>
+<a href= "Event_Pages/2023PlantCamp101/PlantCamp101.png" 
+title="Plant Camp 101" rel="lightbox[plantCamp]">
+ <h2>Plant Camp 101 &mdash; Botany Edition</h2>
+<br>
+<img align="center" src="Event_Pages/2023PlantCamp101/PlantCamp101-sm.jpg"/>
+</a>
 
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                <h2>2022 Calendar of Events</h2>
+                                <h2>2023 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
 <!--
 <h3><del>Crossed out items</del> <i>are cancelled due to concerns over Coronavirus</i><br></h3>
@@ -295,12 +295,16 @@ title="Barnyard Tours" rel="lightbox[barnyardTour]">
 Barnyard Tours
 </a>
 </td></tr>
-<!--
 <tr> <td id="EventDate">
-<del>Saturday &amp; Sunday, Sep 12<sup>th</sup> &amp; 13<sup>th</sup> 10am&mdash;4pm in Hart Hall</del>
+Tuesdays, Wednesdays &amp; Thursdays in January, 9am&ndash;11am
+<i>(last class Jan. 26<sup>th</sub>)</i>
 </td> <td id="Event"> 
-<del>The High Desert Modular Model Railroad Club Annual Train Show</del>
+<a href= "Event_Pages/2023PlantCamp101/PlantCamp101.png" 
+title="Plant Camp 101" rel="lightbox[plantCamp]">
+Plant Camp 101 &mdash; Botany Edition
+</a>
 </td></tr>
+<!--
 <tr> <td id="EventDate">
 <del>Sunday, Sept. 20<sup>th</sup> 8am&mdash;12pm</del>
 </td> <td id="Event"> 
